Added a basic under construction page

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,6 +1,6 @@
 html {
-    background: $_color-light repeat;
-    color: $_color-dark;
+    background: $_color-lagoon repeat;
+    color: $_color-light;
     font-family: $_font-family;
     font-size: $_font-size;
     word-spacing: $_spacing;
