--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,6 +3,7 @@
 @import 'constants.scss';
 @import 'base.scss';
 @import 'layout.scss';
+@import 'elements.scss';
 @import 'typography.scss';
 @import 'animations.scss';
 @import 'transitions.scss';
