--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,3 +1,8 @@
+.container {
+    padding: 2em;
+    width: 100%;
+}
+
 .flex-container {
     display: flex;
     flex-direction: row;
@@ -9,4 +14,17 @@
         flex: 0 1 auto;
         align-self: auto;
     }
+}
+
+.float-center {
+    align-items: center;
+    border: none;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    z-index: 10;
 }
