--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,1 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Asap:400,400i,500,500i,600,600i');
+@import url('https://fonts.googleapis.com/css?family=Yantramanav:100,300,400,500');
