--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,19 +1,30 @@
-.container {
+.content {
+    margin: 0 auto;
+    max-width: var(--wrapper-width);
+    overflow: hidden;
     padding: 2em;
+    position: relative;
     width: 100%;
 }
 
 .flex-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-content: stretch;
-    align-items: flex-start;
+    align-items: center;
     .flex-child {
         flex: 0 1 auto;
         align-self: auto;
     }
+}
+
+.flex-center {
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
 }
 
 .float-center {
@@ -23,8 +34,33 @@
     height: 100vh;
     justify-content: center;
     left: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100vw;
     z-index: 10;
+}
+
+.fixed-pseudo {
+    &:before, &:after {
+        content: '';
+        height: 100%;
+        left: 0;
+        max-width: var(--wrapper-width);
+        margin: 0 auto;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+    }
+}
+
+.fullwidth {
+    max-width: 100vw !important;
+    &:before, &:after {
+        max-width: 100vw !important;
+    }
+}
+
+.block {
+    display: block;
 }
