Involved section [Index - WIP]

--- a/src/assets/styles/constants.scss
+++ b/src/assets/styles/constants.scss
@@ -9,6 +9,7 @@
     --tracking: 0rem;
     --tracking-medium: 0.5rem;
     --tracking-large: 0.8rem;
+    --spacing-small: 0.2em;
 
     --color-light: #FCFEFE;
     --color-dark: #000;
