--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -5,8 +5,8 @@ h1, h2, h3, h4, h5 {
 h1 {
     font-family: 'Yantramanav';
     font-size: 2.4em;
-    font-weight: 700;
-    letter-spacing: 0.2em;
+    font-weight: 500;
+    letter-spacing: var(--spacing-small);
     margin-bottom: var(--tracking-large);
     padding: 0 var(--tracking-large);
     width: 80%;
@@ -15,8 +15,8 @@ h1 {
 h2 {
     font-family: 'Yantramanav';
     font-size: 2.2em;
-    font-weight: 700;
-    letter-spacing: 0.2em;
+    font-weight: 500;
+    letter-spacing: var(--spacing-small);
     margin-bottom: var(--tracking-large);
     padding: 0 var(--tracking-large);
     width: 80%;
@@ -25,8 +25,8 @@ h2 {
 h3 {
     font-family: 'Yantramanav';
     font-size: 2em;
-    font-weight: 700;
-    letter-spacing: 0.2em;
+    font-weight: 500;
+    letter-spacing: var(--spacing-small);
     margin-bottom: var(--tracking-large);
     padding: 0 var(--tracking-large);
     width: 80%;
@@ -35,13 +35,17 @@ h3 {
 h4 {
     font-family: 'Yantramanav';
     font-size: 1.8em;
-    font-weight: 600;
+    font-weight: 400;
+    letter-spacing: var(--spacing-small);
+    text-transform: none;
 }
 
 h5 {
     font-family: 'Yantramanav';
     font-size: 1.6em;
-    font-weight: 500;
+    font-weight: 400;
+    letter-spacing: var(--spacing-small);
+    text-transform: none;
 }
 
 p {
