Updates Index, implemented Firebase read logic, added loader and caching mechanism

--- a/src/assets/styles/constants.scss
+++ b/src/assets/styles/constants.scss
@@ -18,6 +18,7 @@
     --color-cerulean: #00b1bd;
     --color-ocean: #006387;
     --color-lagoon: #046287;
+    --color-elephant: #103240;
     --color-terracota: #dc6f2d;
     --color-robroy: #dda858;
 }
