--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -3,7 +3,7 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
-    background: #d0dde2 url('assets/images/pattern-topo.png') repeat;
+    background: #d0dde2 url('assets/images/pattern-dark.png') repeat;
     box-sizing: border-box;
     color: var(--color-light);
     cursor: default;
@@ -13,8 +13,7 @@ html {
     line-height: var(--line-height);
     position: relative;
     word-spacing: var(--spacing);
-    &:before {
-        background: rgba(1, 85, 107, 0.2);
+    &:before, &:after {
         content: '';
         height: 100%;
         left: 0;
@@ -22,7 +21,14 @@ html {
         position: absolute;
         top: 0;
         width: 100%;
-        z-index: -1;
+        z-index: -2;
+    }
+    &:before {
+        background: rgba(1, 85, 107, 0.2);
+    }
+    &:after {
+        background: linear-gradient(to right, #016487 0%, rgba(255, 255, 255, 0) 15%, rgba(255, 255, 255, 0) 85%, #016487 100%);
+        opacity: 0.2;
     }
 }
 
@@ -38,8 +44,11 @@ html {
 }
 
 main {
-    overflow-x: hidden;
+    box-shadow: 0px 0px 10px 4px rgba(1, 100, 135, 0.2);
+    margin: 0 auto;
+    max-width: var(--wrapper-width);
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 a {
