Events section [Index - WIP]

--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -10,6 +10,7 @@ h1 {
     margin-bottom: var(--tracking-large);
     max-width: 1040px;
     padding: 0 var(--tracking-large);
+    text-transform: uppercase;
     width: 100%;
 }
 
@@ -21,6 +22,7 @@ h2 {
     margin-bottom: var(--tracking-large);
     max-width: 1040px;
     padding: 0 var(--tracking-large);
+    text-transform: uppercase;
     width: 100%;
 }
 
@@ -32,6 +34,7 @@ h3 {
     margin-bottom: var(--tracking-large);
     max-width: 1040px;
     padding: 0 var(--tracking-large);
+    text-transform: uppercase;
     width: 100%;
 }
 
