--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -24,6 +24,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-content: flex-start;
+    align-items: flex-start;
 }
 
 .flex-center {
