--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -3,7 +3,7 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
-    background: #d0dde2 url('assets/images/pattern-dark.png') repeat;
+    background: #d0dde2 url('assets/images/pattern-skulls.png') repeat;
     box-sizing: border-box;
     color: var(--color-light);
     cursor: default;
@@ -52,7 +52,9 @@ main {
 }
 
 a {
+    border-bottom: 1px solid;
     color: var(--color-light);
+    cursor: pointer;
     text-decoration: none;
     transition: color 0.2s;
     &:visited {
