--- a/src/assets/styles/elements.scss
+++ b/src/assets/styles/elements.scss
@@ -1,9 +1,12 @@
 .button {
-    font-family: "Yantramanav", sans-serif;
-    font-size: 1.25em;
-    font-weight: 400;
+    border: 2px solid transparent;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    font-family: "Kalam", sans-serif;
+    font-size: 1.1em;
+    font-weight: 500;
     outline: none;
-    padding: 0.8rem 1rem 0.8rem 2rem;
+    padding: 1rem 1rem 0.8rem 1rem;
     position: relative;
     letter-spacing: 0.02em;
     transition: all 0.3s ease-out;
@@ -11,64 +14,33 @@
         position: relative;
         z-index: 5;
     }
-    &:before, &:after {
-        content: '';
-        height: 100%;
-        left: 0;
-        position: absolute;
-        top: 0;
-        transition: all 0.4s ease-out;
-        width: 1rem;
-        z-index: 1;
-    }
-    &:after {
-        width: 100%;
-        opacity: 0;
-    }
+
     &:hover {
-        &:after {
-            opacity: 0.3;
-        }
+        border-color: transparent !important;
     }
     &:active {
-        &:before {
-            transition: width 0.1s ease-in;
-            width: 0.85rem;
-        }
-        &:after {
-            opacity: 0.1;
-        }
+        box-shadow: none;
     }
 
     // Modifiers
     &.cerulean {
         background: var(--color-cerulean);
+        border-color: #7fd4da;
         color: var(--color-light);
-        &:before, &:after {
-            background: var(--color-ocean);
-        }
     }
     &.robroy {
         background: var(--color-robroy);
+        border-color: #fab54d;
         color: var(--color-light);
-        &:before, &:after {
-            background: var(--color-terracota);
-        }
     }
     &.large {
-        font-size: 1.4em;
-        font-weight: 400;
+        font-size: 1.2em;
         outline: none;
-        padding: 0.8rem 1rem 0.7rem 2rem;
         letter-spacing: 0.05em;
     }
-    &.shadow {
-        box-shadow: 0px 3px 7px rgba(1,85,107,0.16), 3px 0px 5px rgba(1,85,107,0.23);
-        &:hover {
-            box-shadow: 0px 3px 10px rgba(1,85,107,0.16), 3px 0px 8px rgba(1,85,107,0.23);
-        }
-        &:active {
-            box-shadow: 0px 1px 10px rgba(1,85,107,0.16), 1px 0px 8px rgba(1,85,107,0.23);
-        }
+    &.small {
+        font-size: 0.9em;
+        font-weight: 600;
+        outline: none;
     }
 }
