Updated Index and new page: Volunteer

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -61,9 +61,9 @@ a {
         color: var(--color-light);
     }
     &:hover {
-        color: var(--color-cyan);
+        color: var(--color-terracota);
     }
     &:active {
-        color: var(--color-cyan);
+        color: var(--color-terracota);
     }
 }
