--- a/src/assets/styles/constants.scss
+++ b/src/assets/styles/constants.scss
@@ -1,5 +1,5 @@
 :root {
-    --font-family: 'BentonSans', Helvetica, Arial, sans-serif;
+    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'BentonSans', Helvetica, Arial, sans-serif;
     --font-size: 16px;
 
     --wrapper-width: 1366px;
