--- a/src/assets/styles/elements.scss
+++ b/src/assets/styles/elements.scss
@@ -3,7 +3,7 @@
     border-radius: 3px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     font-family: "Kalam", sans-serif;
-    font-size: 1.1em;
+    font-size: 1.2em;
     font-weight: 500;
     outline: none;
     padding: 1rem 1rem 0.8rem 1rem;
@@ -18,8 +18,9 @@
     &:hover {
         border-color: transparent !important;
     }
-    &:active {
-        box-shadow: none;
+    &:active, &[disabled="true"] {
+        box-shadow: none !important;
+        transition: all 0s ease-out;
     }
 
     // Modifiers
@@ -34,12 +35,12 @@
         color: var(--color-light);
     }
     &.large {
-        font-size: 1.2em;
+        font-size: 1.3em;
         outline: none;
         letter-spacing: 0.05em;
     }
     &.small {
-        font-size: 0.9em;
+        font-size: 1em;
         font-weight: 600;
         outline: none;
     }
