--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -51,7 +51,7 @@ h5 {
     text-transform: none;
 }
 
-p {
+p, form {
     max-width: 1040px;
     padding: 0 var(--tracking-large) var(--tracking-large);
     width: 100%;
