Large refactor to fix and upgrade webpack build configuration, linting and more

--- a/src/assets/styles/constants.scss
+++ b/src/assets/styles/constants.scss
@@ -1,24 +1,25 @@
 :root {
-    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'BentonSans', Helvetica, Arial, sans-serif;
-    --font-size: 16px;
+  --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "BentonSans",
+    Helvetica, Arial, sans-serif;
+  --font-size: 16px;
 
-    --wrapper-width: 1366px;
+  --wrapper-width: 1366px;
 
-    --spacing: 0rem;
-    --line-height: 1.5;
-    --tracking: 0rem;
-    --tracking-medium: 0.5rem;
-    --tracking-large: 0.8rem;
-    --spacing-small: 0.1em;
+  --spacing: 0rem;
+  --line-height: 1.5;
+  --tracking: 0rem;
+  --tracking-medium: 0.5rem;
+  --tracking-large: 0.8rem;
+  --spacing-small: 0.1em;
 
-    --color-light: #FCFEFE;
-    --color-dark: #000;
+  --color-light: #fcfefe;
+  --color-dark: #000;
 
-    --color-cyan: #e4fdff;
-    --color-cerulean: #00b1bd;
-    --color-ocean: #006387;
-    --color-lagoon: #046287;
-    --color-elephant: #103240;
-    --color-terracota: #dc6f2d;
-    --color-robroy: #dda858;
+  --color-cyan: #e4fdff;
+  --color-cerulean: #00b1bd;
+  --color-ocean: #006387;
+  --color-lagoon: #046287;
+  --color-elephant: #103240;
+  --color-terracota: #dc6f2d;
+  --color-robroy: #dda858;
 }
