--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,69 +1,76 @@
 html {
-    -moz-osx-font-smoothing: grayscale;
-    -ms-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    background: #b5bfc4 url('assets/images/pattern-sym.png') repeat;
-    box-sizing: border-box;
-    color: var(--color-light);
-    cursor: default;
-    font-family: var(--font-family);
-    font-size: var(--font-size);
-    letter-spacing: var(--tracking);
-    line-height: var(--line-height);
-    position: relative;
-    word-spacing: var(--spacing);
-    &:before, &:after {
-        content: '';
-        height: 100%;
-        left: 0;
-        margin: 0 auto;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: -2;
-    }
-    &:before {
-        background: rgba(148, 146, 144, 0.4);
-    }
-    &:after {
-        background: linear-gradient(to right, #016487 0%, rgba(255, 255, 255, 0) 15%, rgba(255, 255, 255, 0) 85%, #016487 100%);
-        opacity: 0.2;
-    }
+  -moz-osx-font-smoothing: grayscale;
+  -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  background: #b5bfc4 url("assets/images/pattern-sym.png") repeat;
+  box-sizing: border-box;
+  color: var(--color-light);
+  cursor: default;
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  letter-spacing: var(--tracking);
+  line-height: var(--line-height);
+  position: relative;
+  word-spacing: var(--spacing);
+  &:before,
+  &:after {
+    content: "";
+    height: 100%;
+    left: 0;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -2;
+  }
+  &:before {
+    background: rgba(148, 146, 144, 0.4);
+  }
+  &:after {
+    background: linear-gradient(
+      to right,
+      #016487 0%,
+      rgba(255, 255, 255, 0) 15%,
+      rgba(255, 255, 255, 0) 85%,
+      #016487 100%
+    );
+    opacity: 0.2;
+  }
 }
 
 ::selection {
-    background: var(--color-cyan);
+  background: var(--color-cyan);
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 main {
-    box-shadow: 0px 0px 10px 4px rgba(1, 100, 135, 0.2);
-    margin: 0 auto;
-    max-width: var(--wrapper-width);
-    min-height: 100vh;
-    overflow-x: hidden;
+  box-shadow: 0px 0px 10px 4px rgba(1, 100, 135, 0.2);
+  margin: 0 auto;
+  max-width: var(--wrapper-width);
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
+  color: var(--color-light);
+  cursor: pointer;
+  font-weight: 600;
+  text-decoration: none;
+  transition: color 0.2s;
+  &:visited {
     color: var(--color-light);
-    cursor: pointer;
-    font-weight: 600;
-    text-decoration: none;
-    transition: color 0.2s;
-    &:visited {
-        color: var(--color-light);
-    }
-    &:hover {
-        color: var(--color-terracota);
-    }
-    &:active {
-        color: var(--color-terracota);
-    }
+  }
+  &:hover {
+    color: var(--color-terracota);
+  }
+  &:active {
+    color: var(--color-terracota);
+  }
 }
