--- a/src/assets/styles/elements.scss
+++ b/src/assets/styles/elements.scss
@@ -1,47 +1,48 @@
 .button {
-    border: 2px solid transparent;
-    border-radius: 3px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    font-family: "Kalam", sans-serif;
-    font-size: 1.2em;
-    font-weight: 500;
-    outline: none;
-    padding: 1rem 1rem 0.8rem 1rem;
+  border: 2px solid transparent;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  font-family: "Kalam", sans-serif;
+  font-size: 1.2em;
+  font-weight: 500;
+  outline: none;
+  padding: 1rem 1rem 0.8rem 1rem;
+  position: relative;
+  letter-spacing: 0.02em;
+  transition: all 0.3s ease-out;
+  span {
     position: relative;
-    letter-spacing: 0.02em;
-    transition: all 0.3s ease-out;
-    span {
-        position: relative;
-        z-index: 5;
-    }
+    z-index: 5;
+  }
 
-    &:hover {
-        border-color: transparent !important;
-    }
-    &:active, &[disabled="true"] {
-        box-shadow: none !important;
-        transition: all 0s ease-out;
-    }
+  &:hover {
+    border-color: transparent !important;
+  }
+  &:active,
+  &[disabled="true"] {
+    box-shadow: none !important;
+    transition: all 0s ease-out;
+  }
 
-    // Modifiers
-    &.cerulean {
-        background: var(--color-cerulean);
-        border-color: #7fd4da;
-        color: var(--color-light);
-    }
-    &.robroy {
-        background: var(--color-robroy);
-        border-color: #fab54d;
-        color: var(--color-light);
-    }
-    &.large {
-        font-size: 1.3em;
-        outline: none;
-        letter-spacing: 0.05em;
-    }
-    &.small {
-        font-size: 1em;
-        font-weight: 600;
-        outline: none;
-    }
+  // Modifiers
+  &.cerulean {
+    background: var(--color-cerulean);
+    border-color: #7fd4da;
+    color: var(--color-light);
+  }
+  &.robroy {
+    background: var(--color-robroy);
+    border-color: #fab54d;
+    color: var(--color-light);
+  }
+  &.large {
+    font-size: 1.3em;
+    outline: none;
+    letter-spacing: 0.05em;
+  }
+  &.small {
+    font-size: 1em;
+    font-weight: 600;
+    outline: none;
+  }
 }
