--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,67 +1,69 @@
 .flex-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-content: stretch;
-    align-items: center;
-    .flex-child {
-        flex: 0 1 auto;
-        align-self: auto;
-    }
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: center;
+  .flex-child {
+    flex: 0 1 auto;
+    align-self: auto;
+  }
 }
 
 .flex-around {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: flex-start;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+  align-items: flex-start;
 }
 
 .flex-center {
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
 }
 
 .float-center {
-    align-items: center;
-    border: none;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    z-index: 10;
+  align-items: center;
+  border: none;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  z-index: 10;
 }
 
 .fixed-pseudo {
-    position: relative;
-    &:before, &:after {
-        content: '';
-        height: 100%;
-        left: 0;
-        max-width: var(--wrapper-width);
-        margin: 0 auto;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: -1;
-    }
+  position: relative;
+  &:before,
+  &:after {
+    content: "";
+    height: 100%;
+    left: 0;
+    max-width: var(--wrapper-width);
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+  }
 }
 
 .fullwidth {
+  max-width: 100vw !important;
+  &:before,
+  &:after {
     max-width: 100vw !important;
-    &:before, &:after {
-        max-width: 100vw !important;
-    }
+  }
 }
 
 .block {
-    display: block;
+  display: block;
 }
