--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -1,66 +1,71 @@
-h1, h2, h3, h4, h5 {
-    // text-transform: uppercase;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  // text-transform: uppercase;
 }
 
 h1 {
-    font-family: 'BentonSans Cond';
-    font-size: 2.4em;
-    font-weight: 500;
-    letter-spacing: var(--spacing-small);
-    margin-bottom: var(--tracking-large);
-    max-width: 1040px;
-    padding: 0 var(--tracking-large);
-    width: 100%;
+  font-family: "BentonSans Cond";
+  font-size: 2.4em;
+  font-weight: 500;
+  letter-spacing: var(--spacing-small);
+  margin-bottom: var(--tracking-large);
+  max-width: 1040px;
+  padding: 0 var(--tracking-large);
+  width: 100%;
 }
 
 h2 {
-    font-family: 'BentonSans Cond';
-    font-size: 2.2em;
-    font-weight: 500;
-    letter-spacing: var(--spacing-small);
-    margin-bottom: var(--tracking-large);
-    max-width: 1040px;
-    padding: 0 var(--tracking-large);
-    width: 100%;
+  font-family: "BentonSans Cond";
+  font-size: 2.2em;
+  font-weight: 500;
+  letter-spacing: var(--spacing-small);
+  margin-bottom: var(--tracking-large);
+  max-width: 1040px;
+  padding: 0 var(--tracking-large);
+  width: 100%;
 }
 
 h3 {
-    font-family: 'BentonSans Cond';
-    font-size: 2em;
-    font-weight: 500;
-    letter-spacing: var(--spacing-small);
-    margin-bottom: var(--tracking-large);
-    max-width: 1040px;
-    padding: 0 var(--tracking-large);
-    width: 100%;
+  font-family: "BentonSans Cond";
+  font-size: 2em;
+  font-weight: 500;
+  letter-spacing: var(--spacing-small);
+  margin-bottom: var(--tracking-large);
+  max-width: 1040px;
+  padding: 0 var(--tracking-large);
+  width: 100%;
 }
 
 h4 {
-    font-family: 'BentonSans Cond';
-    font-size: 1.8em;
-    font-weight: 300;
-    letter-spacing: var(--spacing-small);
-    text-transform: none;
+  font-family: "BentonSans Cond";
+  font-size: 1.8em;
+  font-weight: 300;
+  letter-spacing: var(--spacing-small);
+  text-transform: none;
 }
 
 h5 {
-    font-family: 'BentonSans Cond';
-    font-size: 1.6em;
-    font-weight: 400;
-    letter-spacing: var(--spacing-small);
-    text-transform: none;
+  font-family: "BentonSans Cond";
+  font-size: 1.6em;
+  font-weight: 400;
+  letter-spacing: var(--spacing-small);
+  text-transform: none;
 }
 
-p, form {
-    max-width: 1040px;
-    padding: 0 var(--tracking-large) var(--tracking-large);
-    width: 100%;
+p,
+form {
+  max-width: 1040px;
+  padding: 0 var(--tracking-large) var(--tracking-large);
+  width: 100%;
 }
 
 .align-center {
-    text-align: center;
+  text-align: center;
 }
 
 .align-right {
-    text-align: right;
+  text-align: right;
 }
